@@ -41,7 +41,7 @@ seats=seat-0
 #
 # Seat configuration
 #
-# vt = Virtual terminal to start on (0-n or 'active')
+# vt = Virtual terminal to start on (0-n)
 # greeter-theme = Greeter theme
 # greeter-user = User to run greeter process as
 # session = Default session
@@ -55,7 +55,7 @@ seats=seat-0
 # key = Authentication key to use
 #
 [seat-0]
-vt=active
+#vt=0
 #greeter-theme=example-gtk-gnome
 #greeter-user=lightdm
 #session=gnome
